--- a/12-Backend-App/package.json
+++ b/12-Backend-App/package.json
@@ -17,8 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "mongodb": "^3.1.4",
     "mysql2": "^1.6.1",
     "mysql2-promise": "^0.1.4"
   },
