--- a/12-Backend-App/package.json
+++ b/12-Backend-App/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
+    "express-session": "^1.15.6",
     "mongodb": "^3.1.4",
     "mysql2": "^1.6.1",
     "mysql2-promise": "^0.1.4"
