adding jwt token

--- a/12-Backend-App/package.json
+++ b/12-Backend-App/package.json
@@ -23,6 +23,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.3.0",
     "mongodb": "^3.1.4",
     "mysql2": "^1.6.1",
     "mysql2-promise": "^0.1.4"
